--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -1,6 +1,6 @@
 # Where are all the schema files located? globs are supported eg  src/**/*.graphqls
 schema:
-  - graph/*.graphqls
+  - internal/infra/graph/*.graphqls
 
 # Where should the generated server code go?
 exec:
@@ -42,7 +42,7 @@ resolver:
 # gqlgen will search for any type names in the schema in these go packages
 # if they match it will use them, otherwise it will generate them.
 autobind:
-  - "github.com/beriloqueiroz/desafio-clean-arch/internal/infra/graph/model"
+  # - "github.com/beriloqueiroz/desafio-clean-arch/internal/infra/graph"
 
 # This section declares type mapping between the GraphQL and go type systems
 #
