--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,12 +15,36 @@ services:
       - .docker/mysql:/var/lib/mysql
 
   rabbitmq:
-    image: rabbitmq:3-management
+    build: 
+      context: ./internal/infra/rabbitmq
+      dockerfile: Dockerfile
     container_name: rabbitmq
     restart: always
     ports:
       - 5672:5672
       - 15672:15672
+
+  app:
+    build: 
+      context: ./
+      dockerfile: "Dockerfile"
+    restart: always
+    container_name: app
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      DB_DRIVER: mysql
+      DB_HOST: localhost
+      DB_PORT: 3306
+      DB_USER: root
+      DB_PASSWORD: root
+      DB_NAME: orders
+      WEB_SERVER_PORT: :8000
+      GRPC_SERVER_PORT: 50051
+      GRAPHQL_SERVER_PORT: 8080
+      RABBITMQ_URL_CONN: amqp://guest:guest@localhost:5672/
+    ports:
+      - "8000:8000"
+      - "8080:8080"
+      - "50051:50051"
+    depends_on:
+      - mysql
+      - rabbitmq
