--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,36 +15,40 @@ services:
       - .docker/mysql:/var/lib/mysql
 
   rabbitmq:
-    build: 
-      context: ./internal/infra/rabbitmq
-      dockerfile: Dockerfile
+    image: rabbitmq:3-management
     container_name: rabbitmq
     restart: always
     ports:
       - 5672:5672
       - 15672:15672
-
-  app:
-    build: 
-      context: ./
-      dockerfile: "Dockerfile"
-    restart: always
-    container_name: app
     environment:
-      DB_DRIVER: mysql
-      DB_HOST: localhost
-      DB_PORT: 3306
-      DB_USER: root
-      DB_PASSWORD: root
-      DB_NAME: orders
-      WEB_SERVER_PORT: :8000
-      GRPC_SERVER_PORT: 50051
-      GRAPHQL_SERVER_PORT: 8080
-      RABBITMQ_URL_CONN: amqp://guest:guest@localhost:5672/
-    ports:
-      - "8000:8000"
-      - "8080:8080"
-      - "50051:50051"
-    depends_on:
-      - mysql
-      - rabbitmq
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: 123456
+    volumes:
+      - .docker/rabbitmq/:/var/lib/rabbitmq/
+      - .docker/rabbitmq/log/:/var/log/rabbitmq
+
+  # app:
+  #   build: 
+  #     context: ./
+  #     dockerfile: "Dockerfile"
+  #   restart: always
+  #   container_name: app
+  #   environment:
+  #     DB_DRIVER: mysql
+  #     DB_HOST: localhost
+  #     DB_PORT: 3306
+  #     DB_USER: root
+  #     DB_PASSWORD: root
+  #     DB_NAME: orders
+  #     WEB_SERVER_PORT: :8000
+  #     GRPC_SERVER_PORT: 50051
+  #     GRAPHQL_SERVER_PORT: 8080
+  #     RABBITMQ_URL_CONN: amqp://guest:guest@localhost:5672/
+  #   ports:
+  #     - "8000:8000"
+  #     - "8080:8080"
+  #     - "50051:50051"
+  #   depends_on:
+  #     - mysql
+  #     - rabbitmq
