--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DB_DRIVER=mysql
-DB_HOST=localhost
+DB_HOST=mysql
 DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=root
@@ -7,4 +7,4 @@ DB_NAME=orders
 WEB_SERVER_PORT=:8000
 GRPC_SERVER_PORT=50051
 GRAPHQL_SERVER_PORT=8080
-RABBITMQ_URL_CONN=amqp://guest:123456@localhost:5672/
+RABBITMQ_URL_CONN=amqp://guest:123456@rabbitmq:5672/
